# modtree

./: Cargo.toml  LICENSE  README.md
src/: main.rs  modules.rs  utils.rs
src/arguments/: args.rs  parse_path.rs
src/modules/: arguments.rs
src/modules/arguments/: args.rs
src/modules/display/: tree.rs
src/modules/processor/: process_directory.rs
src/utils/: file_utils.rs  mod_utils.rs  parse_process_result.rs  tree.rs
src/utils/display_utils/: format.rs  parse.rs
src/utils/file_utils/: create.rs  find.rs  update.rs
